--- a/slide/slide.html
+++ b/slide/slide.html
@@ -152,7 +152,7 @@
         </ul>
     </div>
     <script src="https://cdn.bootcss.com/jquery/1.9.0/jquery.js"></script>
-    <script src='./slide.js'></script>
+    <script src='slide.js'></script>
 
 
 
